In-Class Activity Done

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <link href="css/style.css" rel="stylesheet">
     <title>Jake's Eatery Restaurant - Family Favorites</title>
 </head>
-
 <body>
-
     <header>
         <h1>Jake’s Eatery</h1>
         <nav>
@@ -26,7 +24,31 @@
                 <li><a href="order.html">Order Online</a></li>
         </nav>
     </header>
-    <article>
+
+      <!--the banner below the navigation-->
+     <div class="banner"> 
+        <!--empty div-->
+     </div>
+    <!--end banner-->
+
+     <!--intro section-->
+     <section class=intro>
+        <div class="intro-text">
+            <h2>Join us tonight!</h2>
+            <p>
+                Jake's Eatery specializes in family-style meals for large groups. We have served local diners for over 30 years. Join us for your next party occasion.
+            </p>
+        </div>
+        <picture>
+            <source srcset="./media/images/jakes-eating-lg.jpg" media="(min-width: 900px)">
+            <source srcset="./media/images/jakes-eating-md.jpg" media="(min-width: 750px)">
+            <img src="./media/images/jakes-eating-sm.jpg" alt="people eating at a table">
+        </picture>
+     </section>
+     <!--end intro section-->
+
+
+     <article>
         <h2>Customer Recommendations</h2>
         <p>Our menu is full of delicious dishes and innovative offerings. Try out some of our customer favorites.</p>
         <div class="card-container">
